Fix Bug 233414 - Folder size of collapsed folders does not include

subfolder size
Show subfolder size in tooltip
FIXED-IN: 4.9
BUG: 233414